[gd_scene load_steps=27 format=4 uid="uid://biol5kpjb22s"]

[ext_resource type="PackedScene" uid="uid://b82nsrh332syj" path="res://scenes/game_elements/characters/enemies/throwing_enemy/throwing_enemy.tscn" id="1_ine85"]
[ext_resource type="PackedScene" uid="uid://iu2q66clupc6" path="res://scenes/game_elements/characters/player/player.tscn" id="1_n5amm"]
[ext_resource type="Script" uid="uid://da5eiigxh4x7e" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/scripts/combat.gd" id="1_omu5o"]
[ext_resource type="TileSet" uid="uid://4ewcvb1sibsf" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/2_cinematicacombate/tile/tilestaller.tres" id="4_05iye"]
[ext_resource type="Script" uid="uid://db4o0p7nc3svv" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/scripts/charlie_fighting.gd" id="4_kiv56"]
[ext_resource type="SpriteFrames" uid="uid://wdv3k3hudj1h" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/componentes/charliegato.tres" id="4_uft25"]
[ext_resource type="SpriteFrames" uid="uid://x5dyax1ulw8f" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/componentes/boss.tres" id="7_f4d1w"]
[ext_resource type="PackedScene" uid="uid://y8ha8abfyap2" path="res://scenes/game_elements/props/filling_barrel/filling_barrel.tscn" id="8_tmljt"]
[ext_resource type="Resource" uid="uid://cblaldkf38re3" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/componentes/dialogocomienzo.dialogue" id="10_ilkny"]
[ext_resource type="AudioStream" uid="uid://tbk2i8dc7u32" path="res://scenes/quests/story_quests/after_the_tremor/music/sounds/attacksound.wav" id="12_eitnp"]
[ext_resource type="Script" uid="uid://x1mxt6bmei2o" path="res://scenes/ui_elements/cinematic/cinematic.gd" id="12_n5amm"]
[ext_resource type="PackedScene" uid="uid://cfcgrfvtn04yp" path="res://scenes/ui_elements/hud/hud.tscn" id="13_3lgw8"]
[ext_resource type="Resource" uid="uid://dkuosu241la84" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/componentes/dialogofinal.dialogue" id="13_ilkny"]
[ext_resource type="PackedScene" uid="uid://fuhl3l6gxq5k" path="res://scenes/game_elements/props/collectible_item/collectible_item.tscn" id="15_25fjq"]
[ext_resource type="Script" uid="uid://72qfdsx7ftfu" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/scripts/throwing_enemytremor.gd" id="15_omu5o"]
[ext_resource type="Script" uid="uid://bgmwplmj3bfls" path="res://scenes/globals/game_state/inventory/inventory_item.gd" id="16_epny2"]
[ext_resource type="SpriteFrames" uid="uid://k5tiiho1vva0" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/componentes/bryanpalo.tres" id="16_ilkny"]
[ext_resource type="PackedScene" uid="uid://covsdqqsd6rsy" path="res://scenes/game_elements/props/sign/sign.tscn" id="18_epny2"]
[ext_resource type="Script" uid="uid://chpgq8d41toca" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/scripts/scriptsthreadbare/bosshealth.gd" id="18_fq20r"]
[ext_resource type="Texture2D" uid="uid://cw8xowg5jjux7" path="res://scenes/quests/story_quests/after_the_tremor/3_combat/componentes/Se√±al.png" id="19_eitnp"]
[ext_resource type="AudioStream" uid="uid://cbw5v5wpkbff" path="res://scenes/quests/story_quests/after_the_tremor/music/minijuego3.wav" id="20_eitnp"]
[ext_resource type="AudioStream" uid="uid://bnnmm5oppg6nr" path="res://scenes/quests/story_quests/after_the_tremor/music/sounds/defeat.wav" id="23_ilkny"]

[sub_resource type="Resource" id="Resource_ilkny"]
script = ExtResource("16_epny2")
metadata/_custom_type_script = "uid://bgmwplmj3bfls"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fq20r"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ilkny"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="SystemFont" id="SystemFont_fq20r"]
subpixel_positioning = 0

[node name="Combat" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_omu5o")

[node name="PlayersContainer" type="Node2D" parent="."]
modulate = Color(0.7919991, 0.79199916, 0.7919991, 1)

[node name="charlie" parent="PlayersContainer" instance=ExtResource("1_n5amm")]
z_index = 1
position = Vector2(472, 639)
scale = Vector2(0.5, 0.5)
mode = 1
walk_speed = 10.0
run_speed = 10.0
sprite_frames = ExtResource("4_uft25")

[node name="PlayerSprite" parent="PlayersContainer/charlie" index="2"]
sprite_frames = ExtResource("4_uft25")

[node name="PlayerInteraction" parent="PlayersContainer/charlie" index="4"]
process_mode = 4
visible = false
position = Vector2(-126, 3554)

[node name="InteractLabel" parent="PlayersContainer/charlie/PlayerInteraction/InteractMarker" index="0"]
visible = false

[node name="PlayerFighting" parent="PlayersContainer/charlie" index="5"]
process_mode = 0
visible = true
script = ExtResource("4_kiv56")
input_action = "move_left"

[node name="AudioStreamPlayer2D" parent="PlayersContainer/charlie/PlayerFighting/AirStream" index="2"]
bus = &"SFX"

[node name="bryan" parent="PlayersContainer" instance=ExtResource("1_n5amm")]
z_index = 1
position = Vector2(920, 638)
scale = Vector2(0.5, 0.5)
mode = 1
walk_speed = 10.0
run_speed = 10.0
sprite_frames = ExtResource("16_ilkny")

[node name="PlayerSprite" parent="PlayersContainer/bryan" index="2"]
sprite_frames = ExtResource("16_ilkny")
flip_h = true

[node name="PlayerInteraction" parent="PlayersContainer/bryan" index="4"]
process_mode = 4
visible = false
position = Vector2(2674, 182)

[node name="LabelContainer" parent="PlayersContainer/bryan/PlayerInteraction/InteractMarker/InteractLabel" index="0"]
offset_right = 32.0

[node name="PlayerFighting" parent="PlayersContainer/bryan" index="5"]
process_mode = 0
visible = true
script = ExtResource("4_kiv56")
input_action = "move_right"

[node name="AudioStreamPlayer2D" parent="PlayersContainer/bryan/PlayerFighting/AirStream" index="2"]
bus = &"SFX"

[node name="ScreenOverlay" type="CanvasLayer" parent="."]

[node name="HUD" parent="." instance=ExtResource("13_3lgw8")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(732, 401)
zoom = Vector2(1.333, 1.333)
limit_left = 214
limit_top = 171
limit_right = 1177
limit_bottom = 720
position_smoothing_enabled = true
editor_draw_limits = true

[node name="TileMapLayers" type="Node2D" parent="."]
position = Vector2(248, 242.25)

[node name="Grass" type="TileMapLayer" parent="TileMapLayers"]
modulate = Color(0, 0, 0, 1)
tile_map_data = PackedByteArray("AAANAAcAFAABAAkAABANAAYAFAABAAoAAAANAAUAFAABAAoAAAANAAQAFAABAAoAAAANAAMAFAABAAoAAAANAAIAFAABAAoAAAANAAEAFAABAAoAAAAMAAcAFAABAAkAABAMAAYAFAABAAoAAAAMAAUAFAABAAoAAAAMAAQAFAABAAoAAAAMAAMAFAABAAoAAAAMAAIAFAABAAoAAAAMAAEAFAABAAoAAAALAAcAFAABAAkAABALAAYAFAABAAoAAAALAAUAFAABAAoAAAALAAQAFAABAAoAAAALAAMAFAABAAoAAAALAAIAFAABAAoAAAALAAEAFAABAAoAAAAKAAcAFAABAAkAABAKAAYAFAABAAoAAAAKAAUAFAABAAoAAAAKAAQAFAABAAoAAAAKAAMAFAABAAoAAAAKAAIAFAABAAoAAAAKAAEAFAABAAoAAAAJAAcAFAABAAkAABAJAAYAFAABAAoAAAAJAAUAFAABAAoAAAAJAAQAFAABAAoAAAAJAAMAFAABAAoAAAAJAAIAFAABAAoAAAAJAAEAFAABAAoAAAAIAAcAFAABAAkAABAIAAYAFAABAAoAAAAIAAUAFAABAAoAAAAIAAQAFAABAAoAAAAIAAMAFAABAAoAAAAIAAIAFAABAAoAAAAIAAEAFAABAAoAAAAHAAcAFAABAAkAABAHAAYAFAABAAoAAAAHAAQAFAABAAoAAAAHAAMAFAABAAoAAAAHAAIAFAABAAoAAAAHAAEAFAABAAoAAAAGAAcAFAABAAkAABAGAAYAFAABAAoAAAAGAAUAFAABAAoAAAAGAAQAFAABAAoAAAAGAAMAFAABAAoAAAAGAAIAFAABAAoAAAAFAAcAFAABAAkAABAFAAYAFAABAAoAAAAFAAUAFAABAAoAAAAFAAQAFAABAAoAAAAFAAMAFAABAAoAAAAFAAIAFAABAAoAAAAFAAEAFAABAAoAAAAEAAcAFAABAAkAABAEAAUAFAABAAoAAAAEAAQAFAABAAoAAAAEAAMAFAABAAoAAAAEAAIAFAABAAoAAAAEAAEAFAABAAoAAAADAAcAFAABAAkAABADAAYAFAABAAoAAAADAAQAFAABAAoAAAADAAMAFAABAAoAAAADAAIAFAABAAoAAAADAAEAFAABAAoAAAACAAcAFAABAAkAABACAAYAFAABAAoAAAACAAUAFAABAAoAAAACAAMAFAABAAoAAAACAAIAFAABAAoAAAACAAEAFAABAAoAAAABAAcAFAABAAkAABABAAYAFAABAAoAAAABAAUAFAABAAoAAAABAAMAFAABAAoAAAABAAIAFAABAAoAAAABAAEAFAABAAoAAAACAAQAFAABAAoAAAABAAQAFAABAAoAAAAAAAQAFAAAAAoAAAAAAAUAFAAAAAoAAAAAAAYAFAAAAAoAAAAAAAcAFAABAAkAABAGAAAAFAABAAkAACAGAAEAFAABAAoAAAAHAAAAFAABAAkAACAFAAAAFAABAAkAACAIAAAAFAABAAkAACAJAAAAFAABAAkAACALAAAAFAABAAkAACAMAAAAFAABAAkAACAKAAAAFAABAAkAACANAAAAFAABAAkAACAEAAAAFAABAAkAACADAAAAFAABAAkAACACAAAAFAABAAkAACABAAAAFAABAAkAACAAAAAAFAABAAkAACAAAAEAFAAAAAoAAAAAAAIAFAAAAAoAAAAAAAMAFAAAAAoAAAAAAAgAFAAAAAsAAAABAAgAFAABAAsAAAACAAgAFAABAAsAAAADAAgAFAABAAsAAAAEAAgAFAABAAsAAAAFAAgAFAABAAsAAAAGAAgAFAABAAsAAAAHAAgAFAABAAsAAAAIAAgAFAABAAsAAAAJAAgAFAABAAsAAAAKAAgAFAABAAsAAAAMAAgAFAABAAsAAAALAAgAFAABAAsAAAANAAgAFAABAAsAAAAOAAgAFAACAAsAAAAOAAcAFAABAAkAAEAOAAYAFAABAAkAAEAOAAUAFAABAAkAAEAOAAQAFAABAAkAAEAOAAMAFAABAAkAAEAOAAIAFAABAAkAAEAOAAEAFAABAAkAAEAOAAAAFAABAAkAACAEAAYAFAABAAoAAAADAAUAFAABAAoAAAAHAAUAFAABAAoAAAA=")
tile_set = ExtResource("4_05iye")

[node name="Grass2" type="TileMapLayer" parent="TileMapLayers"]
modulate = Color(0.61339027, 0.61339027, 0.61339027, 1)
tile_map_data = PackedByteArray("AAANAAcAFAABAAkAABAMAAcAFAABAAkAABALAAcAFAABAAkAABAKAAcAFAABAAkAABAJAAcAFAABAAkAABAIAAcAFAABAAkAABAHAAcAFAABAAkAABAGAAcAFAABAAkAABAFAAcAFAABAAkAABAEAAcAFAABAAkAABADAAcAFAABAAkAABACAAcAFAABAAkAABABAAcAFAABAAkAABAAAAcAFAABAAkAABAGAAAAFAABAAkAACAHAAAAFAABAAkAACAFAAAAFAABAAkAACAIAAAAFAABAAkAACAJAAAAFAABAAkAACALAAAAFAABAAkAACAMAAAAFAABAAkAACAKAAAAFAABAAkAACANAAAAFAABAAkAACAEAAAAFAABAAkAACADAAAAFAABAAkAACACAAAAFAABAAkAACABAAAAFAABAAkAACAAAAAAFAABAAkAACAAAAgAFAAAAAsAAAABAAgAFAABAAsAAAACAAgAFAABAAsAAAADAAgAFAABAAsAAAAEAAgAFAABAAsAAAAFAAgAFAABAAsAAAAGAAgAFAABAAsAAAAHAAgAFAABAAsAAAAIAAgAFAABAAsAAAAJAAgAFAABAAsAAAAKAAgAFAABAAsAAAAMAAgAFAABAAsAAAALAAgAFAABAAsAAAANAAgAFAABAAsAAAAOAAgAFAACAAsAAAAOAAcAFAABAAkAAEAOAAYAFAABAAkAAEAOAAUAFAABAAkAAEAOAAQAFAABAAkAAEAOAAMAFAABAAkAAEAOAAIAFAABAAkAAEAOAAEAFAABAAkAAEAOAAAAFAABAAkAACAKAAYAFAABAAoAAAADAAYAFAABAAoAAAA=")
tile_set = ExtResource("4_05iye")

[node name="Stones" type="TileMapLayer" parent="TileMapLayers"]
modulate = Color(0.45070827, 0.53112465, 0.5013294, 1)
position = Vector2(-62, -64)
tile_map_data = PackedByteArray("AAAGAAkABAABAAUAAAAHAAkABAABAAUAAAAIAAkABAABAAUAAAAJAAkABAABAAUAAAAKAAkABAABAAUAAAALAAkABAABAAUAAAAMAAkABAABAAUAAAANAAkABAABAAUAAAAOAAkABAABAAUAAAAGAAgABAABAAQAAAAHAAgABAABAAQAAAAIAAgABAABAAQAAAAJAAgABAABAAQAAAAKAAgABwACAAIAAAALAAgABAABAAQAAAAMAAgABAABAAQAAAANAAgABAABAAQAAAAOAAgABAABAAQAAAAAAAEABAACAAEAAAABAAEABAABAAMAAAACAAEABAABAAUAAAACAAAABAABAAQAAAABAAAABAABAAIAAAAAAAAABAABAAEAAAADAAAABAABAAIAAAAFAAAABAACAAIAAAAEAAAABAABAAEAAAAEAAEABAABAAMAAAAFAAEABAABAAUAAAADAAEABAABAAUAAAANAAAABAABAAAAAAAOAAAABAABAAAAAAAMAAAABAABAAAAAAALAAAABAABAAAAAAAKAAAABAABAAAAAAAJAAAABAABAAAAAAAIAAAABAABAAAAAAAHAAAABAAAAAEAAAAHAAEABAABAAMAAAAIAAEABAABAAUAAAAKAAEABAABAAUAAAALAAEABAABAAUAAAAJAAEABwABAAUAAAAMAAEABAABAAMAAAAGAAAABAABAAIAAAAGAAEABAABAAMAAAAAAAkABAABAAUAAAABAAkABAABAAUAAAACAAkABAABAAUAAAADAAkABAABAAUAAAAEAAkABAABAAUAAAAFAAkABAABAAUAAAAAAAgABAABAAQAAAABAAgABAABAAQAAAACAAgABAABAAQAAAADAAgABAABAAQAAAAEAAgABwADAAIAAAAFAAgABAABAAQAAAAAAAIABAACAAEAAAAAAAMABAACAAEAAAAAAAQABAACAAEAAAAAAAcABAACAAEAAAAAAAYABAACAAEAAAAAAAUABAACAAEAAAAPAAAABAAAAAEAAAAPAAEABAAAAAIAAAAQAAAABAABAAEAAAAQAAEABAABAAIAAAAPAAIABAAAAAEAAAAPAAMABAAAAAIAAAAQAAIABAABAAEAAAAQAAMABAABAAIAAAAPAAQABAAAAAEAAAAPAAUABAAAAAIAAAAQAAQABAABAAEAAAAQAAUABAABAAIAAAAPAAYABAAAAAEAAAAPAAcABAAAAAIAAAAQAAYABAABAAEAAAAQAAcABAABAAIAAAAPAAgABAAAAAEAAAAQAAgABAABAAEAAAAPAAkABAABAAMAAAAQAAkABAABAAUAAAANAAEABwADAAMAAAAOAAEABwABAAMAAAD6////BAABAAEAAAD6/wAABAAAAAEAAAD6/wEABAABAAQAAAD6/wIABAABAAEAAAD6/wMABAADAAEAAAD6/wQABAADAAEAAAD6/wUABAAAAAEAAAD6/wYABAABAAEAAAD6/wcABAABAAEAAAD6/wgABAAAAAEAAAD7////BAABAAQAAAD7/wAABAAAAAEAAAD7/wEABAABAAEAAAD7/wIABAADAAEAAAD7/wMABAACAAEAAAD7/wQABAADAAEAAAD7/wUABAACAAEAAAD7/wYABAABAAEAAAD7/wcABAADAAEAAAD7/wgABAADAAEAAAD8////BAABAAQAAAD8/wAABAACAAEAAAD8/wEABAADAAEAAAD8/wIABAABAAQAAAD8/wMABAABAAQAAAD8/wQABAAAAAEAAAD8/wUABAADAAEAAAD8/wYABAABAAQAAAD8/wcABAABAAEAAAD8/wgABAAAAAEAAAD9////BAABAAQAAAD9/wAABAACAAEAAAD9/wEABAAAAAEAAAD9/wIABAABAAEAAAD9/wMABAACAAEAAAD9/wQABAABAAEAAAD9/wUABAACAAEAAAD9/wYABAACAAEAAAD9/wcABAADAAEAAAD9/wgABAACAAEAAAD+////BAADAAEAAAD+/wAABAABAAQAAAD+/wEABAACAAEAAAD+/wIABAAAAAEAAAD+/wMABAAAAAEAAAD+/wQABAACAAEAAAD+/wUABAABAAQAAAD+/wYABAAAAAEAAAD+/wcABAAAAAEAAAD+/wgABAABAAQAAAD/////BAAAAAEAAAD//wAABAABAAQAAAD//wEABAACAAEAAAD//wIABAABAAQAAAD//wMABAADAAEAAAD//wQABAABAAQAAAD//wUABAABAAQAAAD//wYABAABAAQAAAD//wcABAABAAQAAAD//wgABAADAAEAAAAAAPz/BAACAAEAAAAAAP3/BAABAAQAAAAAAP7/BAADAAEAAAAAAP//BAABAAEAAAABAPz/BAACAAEAAAABAP3/BAABAAQAAAABAP7/BAABAAEAAAABAP//BAABAAQAAAACAPz/BAACAAEAAAACAP3/BAACAAEAAAACAP7/BAADAAEAAAACAP//BAADAAEAAAADAPz/BAABAAEAAAADAP3/BAACAAEAAAADAP7/BAABAAEAAAADAP//BAADAAEAAAAEAPz/BAABAAEAAAAEAP3/BAADAAEAAAAEAP7/BAACAAEAAAAEAP//BAABAAQAAAAFAPz/BAACAAEAAAAFAP3/BAADAAEAAAAFAP7/BAABAAQAAAAFAP//BAAAAAEAAAAGAPz/BAABAAQAAAAGAP3/BAAAAAEAAAAGAP7/BAAAAAEAAAAGAP//BAACAAEAAAAHAPz/BAABAAQAAAAHAP3/BAABAAQAAAAHAP7/BAABAAQAAAAHAP//BAADAAEAAAAIAPz/BAACAAEAAAAIAP3/BAABAAQAAAAIAP7/BAADAAEAAAAIAP//BAABAAEAAAAJAPz/BAADAAEAAAAJAP3/BAAAAAEAAAAJAP7/BAAAAAEAAAAJAP//BAABAAQAAAAKAPz/BAACAAEAAAAKAP3/BAACAAEAAAAKAP7/BAABAAEAAAAKAP//BAABAAEAAAALAPz/BAADAAEAAAALAP3/BAABAAEAAAALAP7/BAADAAEAAAALAP//BAABAAEAAAAMAPz/BAABAAEAAAAMAP3/BAADAAEAAAAMAP7/BAAAAAEAAAAMAP//BAADAAEAAAANAPz/BAABAAQAAAANAP3/BAABAAEAAAANAP7/BAABAAQAAAANAP//BAABAAEAAAAOAPz/BAABAAEAAAAOAP3/BAADAAEAAAAOAP7/BAAAAAEAAAAOAP//BAAAAAEAAAAPAPz/BAAAAAEAAAAPAP3/BAACAAEAAAAPAP7/BAACAAEAAAAPAP//BAAAAAEAAAARAP//BAADAAEAAAARAAAABAABAAEAAAARAAEABAADAAEAAAARAAIABAACAAEAAAARAAMABAADAAEAAAARAAQABAAAAAEAAAARAAUABAACAAEAAAARAAYABAABAAQAAAARAAcABAADAAEAAAARAAgABAABAAQAAAASAP//BAADAAEAAAASAAAABAACAAEAAAASAAEABAADAAEAAAASAAIABAABAAQAAAASAAMABAABAAEAAAASAAQABAABAAQAAAASAAUABAABAAEAAAASAAYABAADAAEAAAASAAcABAABAAQAAAASAAgABAAAAAEAAAATAP//BAAAAAEAAAATAAAABAACAAEAAAATAAEABAACAAEAAAATAAIABAACAAEAAAATAAMABAABAAEAAAATAAQABAABAAQAAAATAAUABAABAAEAAAATAAYABAACAAEAAAATAAcABAABAAQAAAATAAgABAAAAAEAAAAQAPz/BAACAAEAAAAQAP3/BAABAAEAAAAQAP7/BAADAAEAAAAQAP//BAAAAAEAAAARAPz/BAABAAEAAAARAP3/BAADAAEAAAARAP7/BAABAAEAAAASAPz/BAACAAEAAAASAP3/BAACAAEAAAASAP7/BAADAAEAAAATAPz/BAABAAEAAAATAP3/BAABAAEAAAATAP7/BAABAAQAAAA=")
tile_set = ExtResource("4_05iye")

[node name="Stones3" type="TileMapLayer" parent="TileMapLayers"]
modulate = Color(0.4509804, 0.5294118, 0.5019608, 0)
position = Vector2(-62, -64)
tile_map_data = PackedByteArray("AAAGAAkABAABAAUAAAAHAAkABAABAAUAAAAIAAkABAABAAUAAAAJAAkABAABAAUAAAAKAAkABAABAAUAAAALAAkABAABAAUAAAAMAAkABAABAAUAAAANAAkABAABAAUAAAAOAAkABAABAAUAAAAGAAgABAABAAUAAAAHAAgABAABAAUAAAAIAAgABAABAAUAAAAJAAgABAABAAUAAAAKAAgABAABAAUAAAALAAgABAABAAUAAAAMAAgABAABAAUAAAANAAgABAABAAUAAAAOAAgABAABAAUAAAAAAAEABAABAAUAAAABAAEABAABAAMAAAACAAEABAABAAUAAAACAAAABAABAAUAAAABAAAABAABAAUAAAAAAAAABAABAAUAAAADAAAABAABAAUAAAAFAAAABAABAAUAAAAEAAAABAABAAUAAAAEAAEABAABAAMAAAAFAAEABAABAAUAAAADAAEABAABAAUAAAANAAAABAABAAUAAAAOAAAABAABAAUAAAAMAAAABAABAAUAAAALAAAABAABAAUAAAAKAAAABAABAAUAAAAJAAAABAABAAUAAAAIAAAABAABAAUAAAAHAAAABAABAAUAAAAHAAEABAABAAMAAAAIAAEABAABAAUAAAAKAAEABAABAAUAAAALAAEABAABAAUAAAAJAAEABwABAAUAAAAMAAEABAABAAUAAAAGAAAABAABAAUAAAAGAAEABAABAAMAAAAAAAkABAABAAUAAAABAAkABAABAAUAAAACAAkABAABAAUAAAADAAkABAABAAUAAAAEAAkABAABAAUAAAAFAAkABAABAAUAAAAAAAgABAABAAUAAAABAAgABAABAAUAAAACAAgABAABAAUAAAADAAgABAABAAUAAAAEAAgABAABAAUAAAAFAAgABAABAAUAAAAAAAIABAABAAUAAAAAAAMABAABAAUAAAAAAAQABAABAAUAAAAAAAcABAABAAUAAAAAAAYABAABAAUAAAAAAAUABAABAAUAAAAPAAAABAABAAUAAAAPAAEABAABAAUAAAAQAAAABAABAAEAAAAQAAEABAABAAIAAAAPAAIABAAAAAEAAAAPAAMABAAAAAIAAAAQAAIABAABAAEAAAAQAAMABAABAAIAAAAPAAQABAAAAAEAAAAPAAUABAAAAAIAAAAQAAQABAABAAEAAAAQAAUABAABAAIAAAAPAAYABAAAAAEAAAAPAAcABAAAAAIAAAAQAAYABAABAAEAAAAQAAcABAABAAIAAAAPAAgABAABAAUAAAAQAAgABAABAAUAAAAPAAkABAABAAMAAAAQAAkABAABAAUAAAANAAEABAABAAUAAAAOAAEABAABAAUAAAD6////BAABAAEAAAD6/wAABAAAAAEAAAD6/wEABAABAAQAAAD6/wIABAABAAEAAAD6/wMABAADAAEAAAD6/wQABAADAAEAAAD6/wUABAAAAAEAAAD6/wYABAABAAEAAAD6/wcABAABAAEAAAD6/wgABAAAAAEAAAD7////BAABAAQAAAD7/wAABAAAAAEAAAD7/wEABAABAAEAAAD7/wIABAADAAEAAAD7/wMABAACAAEAAAD7/wQABAADAAEAAAD7/wUABAACAAEAAAD7/wYABAABAAEAAAD7/wcABAADAAEAAAD7/wgABAADAAEAAAD8////BAABAAQAAAD8/wAABAACAAEAAAD8/wEABAADAAEAAAD8/wIABAABAAQAAAD8/wMABAABAAQAAAD8/wQABAAAAAEAAAD8/wUABAADAAEAAAD8/wYABAABAAQAAAD8/wcABAABAAEAAAD8/wgABAAAAAEAAAD9////BAABAAQAAAD9/wAABAACAAEAAAD9/wEABAAAAAEAAAD9/wIABAABAAEAAAD9/wMABAACAAEAAAD9/wQABAABAAEAAAD9/wUABAACAAEAAAD9/wYABAACAAEAAAD9/wcABAADAAEAAAD9/wgABAACAAEAAAD+////BAADAAEAAAD+/wAABAABAAQAAAD+/wEABAACAAEAAAD+/wIABAAAAAEAAAD+/wMABAAAAAEAAAD+/wQABAACAAEAAAD+/wUABAABAAQAAAD+/wYABAAAAAEAAAD+/wcABAAAAAEAAAD+/wgABAABAAQAAAD/////BAAAAAEAAAD//wAABAABAAQAAAD//wEABAACAAEAAAD//wIABAABAAQAAAD//wMABAADAAEAAAD//wQABAABAAQAAAD//wUABAABAAQAAAD//wYABAABAAQAAAD//wcABAABAAQAAAD//wgABAADAAEAAAAAAPz/BAACAAEAAAAAAP3/BAABAAQAAAAAAP7/BAADAAEAAAAAAP//BAABAAEAAAABAPz/BAACAAEAAAABAP3/BAABAAQAAAABAP7/BAABAAEAAAABAP//BAABAAQAAAACAPz/BAACAAEAAAACAP3/BAACAAEAAAACAP7/BAADAAEAAAACAP//BAADAAEAAAADAPz/BAABAAEAAAADAP3/BAACAAEAAAADAP7/BAABAAEAAAADAP//BAADAAEAAAAEAPz/BAABAAEAAAAEAP3/BAADAAEAAAAEAP7/BAACAAEAAAAEAP//BAABAAQAAAAFAPz/BAACAAEAAAAFAP3/BAADAAEAAAAFAP7/BAABAAQAAAAFAP//BAAAAAEAAAAGAPz/BAABAAQAAAAGAP3/BAAAAAEAAAAGAP7/BAAAAAEAAAAGAP//BAACAAEAAAAHAPz/BAABAAQAAAAHAP3/BAABAAQAAAAHAP7/BAABAAQAAAAHAP//BAADAAEAAAAIAPz/BAACAAEAAAAIAP3/BAABAAQAAAAIAP7/BAADAAEAAAAIAP//BAABAAEAAAAJAPz/BAADAAEAAAAJAP3/BAAAAAEAAAAJAP7/BAAAAAEAAAAJAP//BAABAAQAAAAKAPz/BAACAAEAAAAKAP3/BAACAAEAAAAKAP7/BAABAAEAAAAKAP//BAABAAEAAAALAPz/BAADAAEAAAALAP3/BAABAAEAAAALAP7/BAADAAEAAAALAP//BAABAAEAAAAMAPz/BAABAAEAAAAMAP3/BAADAAEAAAAMAP7/BAAAAAEAAAAMAP//BAADAAEAAAANAPz/BAABAAQAAAANAP3/BAABAAEAAAANAP7/BAABAAQAAAANAP//BAABAAEAAAAOAPz/BAABAAEAAAAOAP3/BAADAAEAAAAOAP7/BAAAAAEAAAAOAP//BAAAAAEAAAAPAPz/BAAAAAEAAAAPAP3/BAACAAEAAAAPAP7/BAACAAEAAAAPAP//BAAAAAEAAAARAP//BAADAAEAAAARAAAABAABAAEAAAARAAEABAADAAEAAAARAAIABAACAAEAAAARAAMABAADAAEAAAARAAQABAAAAAEAAAARAAUABAACAAEAAAARAAYABAABAAQAAAARAAcABAADAAEAAAARAAgABAABAAQAAAASAP//BAADAAEAAAASAAAABAACAAEAAAASAAEABAADAAEAAAASAAIABAABAAQAAAASAAMABAABAAEAAAASAAQABAABAAQAAAASAAUABAABAAEAAAASAAYABAADAAEAAAASAAcABAABAAQAAAASAAgABAAAAAEAAAATAP//BAAAAAEAAAATAAAABAACAAEAAAATAAEABAACAAEAAAATAAIABAACAAEAAAATAAMABAABAAEAAAATAAQABAABAAQAAAATAAUABAABAAEAAAATAAYABAACAAEAAAATAAcABAABAAQAAAATAAgABAAAAAEAAAAQAPz/BAACAAEAAAAQAP3/BAABAAEAAAAQAP7/BAADAAEAAAAQAP//BAAAAAEAAAARAPz/BAABAAEAAAARAP3/BAADAAEAAAARAP7/BAABAAEAAAASAPz/BAACAAEAAAASAP3/BAACAAEAAAASAP7/BAADAAEAAAATAPz/BAABAAEAAAATAP3/BAABAAEAAAATAP7/BAABAAQAAAA=")
tile_set = ExtResource("4_05iye")

[node name="Stones2" type="TileMapLayer" parent="TileMapLayers"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-62, -64)
tile_map_data = PackedByteArray("AAAOAAcAFAAGAB8AAAANAAUAFAAGAB4AAAAOAAIAFAAHACoAAAANAAIAFAAHACoAAAAOAAMAFAAHACoAAAANAAMAFAAHACoAABAOAAYAFAAGACsAAAANAAYAFAAGACsAAAABAAIAFAAGACoAAAACAAIAFAAGACoAAAAMAAYAEwADAAsAAAAMAAIAEwAEAAsAAAABAAMAEwAFAAsAAAAIAAMAFAAHACoAAAAHAAMAFAAHACoAAAAJAAMAFAAHACoAAAA=")
tile_set = ExtResource("4_05iye")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
z_index = 6
position = Vector2(-183, 476.25)
scale = Vector2(1.305, 1.305)
color = Color(0.6944696, 0.6944696, 0.6944696, 1)

[node name="Cinematic" type="Node2D" parent="."]
script = ExtResource("12_n5amm")
dialogue = ExtResource("10_ilkny")
metadata/_custom_type_script = "uid://x1mxt6bmei2o"

[node name="CollectibleItem" parent="." instance=ExtResource("15_25fjq")]
modulate = Color(1, 1, 1, 0)
position = Vector2(794, 309)
revealed = false
next_scene = "uid://c0rr6ow3dhecj"
item = SubResource("Resource_ilkny")
collected_dialogue = ExtResource("13_ilkny")

[node name="Boss" parent="." node_paths=PackedStringArray("target_charlie", "target_bryan", "health_barrel") instance=ExtResource("1_ine85")]
position = Vector2(716, 392)
script = ExtResource("15_omu5o")
target_charlie = NodePath("../PlayersContainer/charlie")
target_bryan = NodePath("../PlayersContainer/bryan")
health_barrel = NodePath("../BossHealth")
throwing_period = 0.7
sprite_frames = ExtResource("7_f4d1w")
distance = 8.0
projectile_speed = 90.0
projectile_duration = 1.0
walking_range = 0.0

[node name="AnimatedSprite2D" parent="Boss" index="0"]
z_index = 1
position = Vector2(-3, -66)
scale = Vector2(4.3, 4.3)
sprite_frames = ExtResource("7_f4d1w")

[node name="ProjectileMarker" parent="Boss" index="3"]
position = Vector2(0, 86)

[node name="HitBox" parent="Boss" index="4"]
monitoring = false
monitorable = false

[node name="BossHealth" parent="." instance=ExtResource("8_tmljt")]
position = Vector2(716, 392)
script = ExtResource("18_fq20r")
needed_amount = 50

[node name="HitBox" parent="BossHealth" index="1"]
position = Vector2(-2, 54)

[node name="CollisionShape2D" parent="BossHealth/HitBox" index="0"]
position = Vector2(1, -7)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BossHealth"]
stream = ExtResource("12_eitnp")
volume_db = -11.345
bus = &"SFX"

[node name="Sign" parent="." instance=ExtResource("18_epny2")]
position = Vector2(745, 316)
text = "..."

[node name="Appearance" parent="Sign" index="0"]
position = Vector2(-8, -1)
scale = Vector2(1.41, 1.41)
texture = ExtResource("19_eitnp")

[node name="Label" parent="Sign/LabelContainer/PanelContainer/MarginContainer" index="0"]
text = "..."

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_eitnp")
volume_db = -5.972
autoplay = true
bus = &"Music"

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_ilkny")
bus = &"SFX"

[node name="UI" type="CanvasLayer" parent="."]

[node name="BossInfo" type="VBoxContainer" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -44.0
offset_right = -128.0
offset_bottom = 203.0
grow_horizontal = 0
grow_vertical = 2

[node name="BossBar" type="ProgressBar" parent="UI/BossInfo"]
custom_minimum_size = Vector2(30, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_fq20r")
theme_override_styles/fill = SubResource("StyleBoxFlat_ilkny")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="BossName" type="Label" parent="UI/BossInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_fq20r")
theme_override_font_sizes/font_size = 14
text = " OSCURIDAD 
INMENSA"
horizontal_alignment = 1

[editable path="PlayersContainer/charlie"]
[editable path="PlayersContainer/bryan"]
[editable path="PlayersContainer/bryan/PlayerInteraction/InteractMarker/InteractLabel"]
[editable path="Boss"]
[editable path="BossHealth"]
[editable path="Sign"]
